# voice-chief-of-staff

./: .gitignore  pyproject.toml
scripts/: authorize_google.py  chat.py
src/vcos/agents/: calendar_agent.py  email_agent.py  root_agent.py
src/vcos/google_clients/: auth.py  calendar_client.py  gmail_client.py
tests/vcos/agents/: test_calendar_agent.py  test_email_agent.py  test_root_agent.py
tests/vcos/google_clients/: test_auth.py  test_calendar_client.py  test_gmail_client.py
