[project]
name = "vcos"
version = "0.1.0"
description = "Voice Chief of Staff - foundations (Calendar/Email agents)"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "google-api-python-client>=2.140.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]